MAT-86: Fix spacing of express checkout buttons

--- a/src/components/CheckoutFunnel/PersonalInformation/PersonalInformation.module.scss
+++ b/src/components/CheckoutFunnel/PersonalInformation/PersonalInformation.module.scss
@@ -61,12 +61,13 @@
   }
 
   .expressCheckoutOptions {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: var(--horizontal-spacing-normal);
 
     @include mobile-media {
-      flex-flow: column;
+      grid-template-columns: auto;
+      column-gap: 0;
       row-gap: $margin-small-2;
     }
 
